cleanup for qc8 profiles

--- a/gemxaas/gem904qc8/zone/system/gem904qc8.notify@.service
+++ b/gemxaas/gem904qc8/zone/system/gem904qc8.notify@.service
@@ -6,4 +6,4 @@ Type=oneshot
 SyslogIdentifier=gem904qc8.notify
 StandardOutput=journal
 StandardError=journal
-ExecStart=/etc/xdaq.d/notifyqualified http://cosmicstandtif.cern.ch:XAAS_MACRO_BRIDGE2G_SENTINEL_HTTP_PORT "automatic restart of service %i after crash" warning gem904qc8 xdaqd::alarm::AutoRestartAfterCrash %i 0
+ExecStart=/etc/xdaq.d/notifyqualified http://gem904qc8daq.cern.ch:XAAS_MACRO_BRIDGE2G_SENTINEL_HTTP_PORT "automatic restart of service %i after crash" warning gem904qc8 xdaqd::alarm::AutoRestartAfterCrash %i 0
