Updates and cleanup to gemutils

--- a/gemutils/Makefile
+++ b/gemutils/Makefile
@@ -18,7 +18,7 @@ include $(BUILD_HOME)/$(Project)/config/mfPythonDefsGEM.mk
 
 Sources =version.cc
 Sources+=Lock.cc
-# Sources+=GEMRegisterUtils.cc
+Sources+=GEMRegisterUtils.cc
 Sources+=db/GEMDatabaseUtils.cc
 Sources+=soap/GEMSOAPToolBox.cc
 # Sources+=gemXMLparser.cc
