--- a/gemhardware/Makefile.managers
+++ b/gemhardware/Makefile.managers
@@ -14,7 +14,7 @@ include $(BUILD_HOME)/$(Project)/config/mfPythonDefsGEM.mk
 
 Sources =version.cc
 Sources+=utils/GEMCrateUtils.cc
-Sources+=vfat/VFAT2Manager.cc vfat/VFAT2ControlPanelWeb.cc
+# Sources+=vfat/VFAT2Manager.cc vfat/VFAT2ControlPanelWeb.cc
 Sources+=amc13/AMC13Manager.cc amc13/AMC13ManagerWeb.cc amc13/AMC13Readout.cc
 Sources+=glib/GLIBManager.cc glib/GLIBManagerWeb.cc glib/GLIBMonitor.cc
 Sources+=optohybrid/OptoHybridManager.cc optohybrid/OptoHybridManagerWeb.cc optohybrid/OptoHybridMonitor.cc
