--- a/gemhardware/Makefile.managers
+++ b/gemhardware/Makefile.managers
@@ -26,6 +26,7 @@ IncludeDirs+=$(BUILD_HOME)/$(Project)/$(Package)/include
 IncludeDirs+=$(BUILD_HOME)/$(Project)/gemutils/include
 IncludeDirs+=$(BUILD_HOME)/$(Project)/gembase/include
 IncludeDirs+=$(BUILD_HOME)/$(Project)/gemreadout/include
+IncludeDirs+=$(BUILD_HOME)/$(Project)/gemonlinedb/include
 IncludeDirs+=$(uHALROOT)/include
 IncludeDirs+=$(XHAL_ROOT)/include
 
@@ -33,6 +34,7 @@ DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/$(Package)/lib/$(XDAQ_OS)/$(XDAQ_
 DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gemutils/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
 DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gembase/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
 DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gemreadout/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
+DependentLibraryDirs+=$(BUILD_HOME)/$(Project)/gemonlinedb/lib/$(XDAQ_OS)/$(XDAQ_PLATFORM)
 DependentLibraryDirs+=$(uHALROOT)/lib
 DependentLibraryDirs+=$(XHAL_ROOT)/lib
 
@@ -43,7 +45,7 @@ DependentLibraries =gemreadout gemhardware_devices
 DependentLibraries+=cactus_amc13_amc13 cactus_amc13_tools
 
 DependentLibraries+=cactus_amc13_tools
-DependentLibraries+=gemutils gembase gemreadout gemhardware_devices
+DependentLibraries+=gemutils gembase gemreadout gemonlinedb gemhardware_devices
 
 Libraries =
 
