[fixup] Tweaks for missed migrations

--- a/gemhardware/devices/Makefile
+++ b/gemhardware/devices/Makefile
@@ -34,9 +34,9 @@ Sources =version.cc
 Sources+=GEMHwDevice.cc
 Sources+=amc/HwGenericAMC.cc
 # Sources+=vfat/HwVFAT2.cc
-# Sources+=glib/HwGLIB.cc
-# Sources+=ctp7/HwCTP7.cc
-# Sources+=optohybrid/HwOptoHybrid.cc
+Sources+=glib/HwGLIB.cc
+#Sources+=ctp7/HwCTP7.cc
+Sources+=optohybrid/HwOptoHybrid.cc
 
 DynamicLibrary=gemhwdevices
 
